Size tablets in slick, still need to fix center alignment

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -25,7 +25,7 @@ body {
 
 #picks {
   padding-top: 50px;
-  text-align: center;
+  text-align: center !important;
 }
 
 #shine {
@@ -34,19 +34,28 @@ body {
 }
 
 /*SLICK*/
-/*.slider {
-        width: 100%;
-        margin: 0;
+.slider {
+      width: 100%;
+      margin: 0;
     }
 
 .slick-slide {
-  margin: 0px 0px;
+  display: inline-block;
 }
 
-.slick-slide img {
-  width: 0%;
+.slick-list {
+  height: 305px !important;
+  padding-top: 5px !important;
+  text-align: center !important;
 }
 
+.slick-track {
+  /*width: auto;*/
+  text-align: center !important;
+  /*transform: translate3d(-926px, 0px, 0px)!important;*/
+}
+
+/*
 .slick-prev:before,
 .slick-next:before {
     color: black;
@@ -82,14 +91,12 @@ body {
 /*background-color: #606060;*/
 background-color: #404040;
     /*background-color: #27ae60;*/
-    position: relative;
-    display: inline-block;
-    /*height: 18%;*/
-    /*width: 15%;*/
-    height: 290px;
-    width: 200px;
-    border: 3px solid #FFFFFF;
-    border-radius: 35px;
+    position: relative !important;
+    display: inline-block !important;
+    height: 290px !important;
+    width: 200px !important;
+    border: 3px solid #FFFFFF !important;
+    border-radius: 35px !important;
     margin: 1% 1% 1% 1%;
     text: white;
     overflow: hidden;
